# SnowEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  SnowEngine.sln  imgui.ini  premake5.lua
Editor/: CMakeLists.txt  premake5.lua
Editor/Source/: Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h  EntityView.cpp  EntityView.h  ImGuiControls.cpp  ImGuiControls.h  LogView.cpp  LogView.h  ParticleTest.cpp  SceneView.cpp  SceneView.h
Engine/: CMakeLists.txt  Engine.filters  Engine.vcxproj  imgui.ini  premake5.lua
Engine/Resources/Shaders/: default.frag  default.vert  particle.comp  skybox.frag  skybox.vert
Engine/Source/: SnowEngine.h
Engine/Source/Core/: Components.cpp  Components.h  Entity.cpp  Entity.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Scene.cpp  Scene.h  Types.h  Window.cpp  Window.h
Engine/Source/Graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  SceneRenderer.cpp  SceneRenderer.h
Engine/Source/Graphics/Rhi/: Buffers.cpp  Buffers.h  CommandBuffer.cpp  CommandBuffer.h  Core.cpp  Core.h  DescriptorSet.cpp  DescriptorSet.h  Gui.cpp  Gui.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  Surface.cpp  Surface.h
Engine/Source/Graphics/Vulkan/: VkBuffers.cpp  VkBuffers.h  VkCommandBuffer.cpp  VkCommandBuffer.h  VkCore.cpp  VkCore.h  VkDescriptorSet.cpp  VkDescriptorSet.h  VkGui.cpp  VkGui.h  VkImage.cpp  VkImage.h  VkPipeline.cpp  VkPipeline.h  VkRenderPass.cpp  VkRenderPass.h  VkShader.cpp  VkShader.h  VkSurface.cpp  VkSurface.h  VkValidationLayer.cpp  VkValidationLayer.h
Engine/resources/models/musket/: license.txt  scene.gltf
Engine/resources/shaders/: base_shader.frag  compile.bat  mapping_shader.frag  shader.frag  shader.vert  shadowMapping.vert  shadowMappingShader.frag  shadowMappingShader.vert  skybox.frag  skybox.vert
Engine/resources/shaders/spirv/: base_shader.frag.spv  base_shader.vert.spv  mapping_shader.frag.spv  shader.frag.spv  shader.vert.spv  shadowMapping.vert.spv  skybox.frag.spv  skybox.vert.spv
Engine/src/: application.cpp  application.h  camera.cpp  camera.h  device.cpp  device.h  imguiLayer.cpp  imguiLayer.h  light.cpp  light.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  pipeline.cpp  pipeline.h  shader.cpp  shader.h  skybox.cpp  skybox.h  swapChain.cpp  swapChain.h  window.cpp  window.h
Engine/src/Buffers/: buffer.hpp  storageBuffer.hpp  texture.cpp  texture.h  uniformBuffer.hpp
Engine/src/Camera/: camera.cpp  camera.h
Engine/src/Core/: Application.cpp  Application.h  Window.cpp  Window.h
Engine/src/Core/Events/: ComponentEvents.hpp  KeyEvents.hpp  MouseEvents.hpp
Engine/src/Core/ImguiLib/: ImguiLayer.cpp  ImguiLayer.h
Engine/src/Core/Input/: Keyboard.cpp  Keyboard.h  Mouse.cpp
Engine/src/Ecs/: componentUtils.hpp  entity.cpp  entity.h  generalComponents.cpp  generalComponents.h  lightComponents.cpp  lightComponents.h  scene.cpp  scene.h
Engine/src/Events/: componentEvents.hpp  event.hpp  otherEvents.hpp
Engine/src/Graphics/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Skybox.cpp  Skybox.h
Engine/src/Input/: keyboard.cpp  mouse.cpp  mouse.h
Engine/src/Lights/: directionalLight.cpp  directionalLight.h  pointLight.cpp  pointLight.h  spotLight.cpp  spotLight.h
Engine/src/ShadowMapping/: shadowMap.cpp  shadowMap.h
Engine/src/Vulkan/: Device.cpp  Device.h  Pipeline.cpp  Pipeline.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h
(+15 files in other folders)
